dfir_rs/tests/compile-fail-stable/surface_inline_defer_tick.rs
../compile-fail/surface_inline_defer_tick.rs